Add detection probablities to tooltips of language selection buttons

--- a/ai.finto.fi/index.html
+++ b/ai.finto.fi/index.html
@@ -163,7 +163,7 @@
 
           <vocab-select v-model="selected_vocab_id" :vocab_ids="vocab_ids" :projects="projects"></vocab-select>
           <vocabulary-info :selected_vocab_id="selected_vocab_id"></vocabulary-info>
-          <text-language-select v-model:text-language="text_language" v-model:is-language-detected="is_language_detected" :selected_vocab_id="selected_vocab_id" :detecting_language="detecting_language" :show_alert_language_detection_failed="show_alert_language_detection_failed"></text-language-select>
+          <text-language-select v-model:text-language="text_language" v-model:is-language-detected="is_language_detected" :text_language_detection_results="text_language_detection_results" :selected_vocab_id="selected_vocab_id" :detecting_language="detecting_language" :show_alert_language_detection_failed="show_alert_language_detection_failed"></text-language-select>
           <limit-input v-model="limit"></limit-input>
           <labels-language-select v-model="labels_language" :selected_vocab_id="selected_vocab_id"></labels-language-select>
 
